chore: update workshop files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,20 +3,26 @@ logging.pattern.correlation=[${spring.application.name:},%X{traceId:-},%X{spanId
 logging.include-application-name=false
 
 spring.docker.compose.lifecycle-management=start_only
+
+#### DB Config ####
 spring.datasource.url=jdbc:postgresql://localhost:25432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=false
 jdbc.datasource-proxy.query.enable-logging=true
-jdbc.datasource-proxy.query.logger-name=bookstore.query-logger
 jdbc.datasource-proxy.query.log-level=DEBUG
 jdbc.datasource-proxy.multiline=false
-logging.level.bookstore.query-logger=DEBUG
+
+#### RabbitMQ Config ####
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
 #### Actuator ######
 management.endpoints.web.exposure.include=*
 management.endpoint.health.probes.enabled=true
 management.tracing.enabled=true
 management.tracing.sampling.probability=1.0
-
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
